.provarCaches/00D5f000005vwGkEAI/objects/rstk__socontract__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_socontract</customHelpPage>
    <description>socontract__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socontract_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; rstk__socontract_contractid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__socontract_contractid__c &amp; &quot; (&quot; &amp; rstk__socontract_desc__c &amp; &quot;)&quot;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_actgracedays__c</fullName>
        <inlineHelpText>If activation does not occur during this &quot;grace period&quot; (defined in Days here), billing will begin after this number of days.  Value is initially defaulted from the Sales Order Control record for the given Sales Division but can be overridden.</inlineHelpText>
        <label>Activation Grace Period  (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this contract is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_adminfee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_approvalsts__c</fullName>
        <inlineHelpText>Valid values are

Not Submitted
Pending Risk Approval
Pending Margin Approval
Approved
Rejected

Note:  There is no validation between &apos;Contract Approval Status&apos;, &apos;Customer Acceptance Status&apos; &amp; &apos;Contract Status&apos; - it is up to users to manage this.</inlineHelpText>
        <label>Contract Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Risk Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Margin Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_billuom__c</fullName>
        <inlineHelpText>Billing frequency. Options are &apos;Monthly&apos; or &apos;Quarterly&apos;.</inlineHelpText>
        <label>Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_btaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Bill-To Address (defined on the Customer Master &gt; Customer Addresses) for the Sales Customer, which is the Customer on the Sales Order Header.</inlineHelpText>
        <label>Sales Customer Bill-To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Contract has been cancelled and cannot be used.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_chargetype__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-none-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_commencedate__c</fullName>
        <inlineHelpText>The actual start date based on the first activity against this Contract.</inlineHelpText>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_conpriceonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, uses the pricing as defined for the ‘Products for Purchase’ that have been added to the Contract, and this price cannot be overridden.</inlineHelpText>
        <label>Only Contract Product Pricing on SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_conprodonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, restricts Products that can be selected when adding a SO Line where the Sales Order is associated with a this Contract. The limitation is to only be able to use Products added under the ‘Products for Purchase’ section of the Contract.</inlineHelpText>
        <label>Only Contract Products on Sales Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_constatus__c</fullName>
        <inlineHelpText>Valid values are

Draft
Processing Internal Approval
Internally Approved
Customer Accepted
Active
Cancelled
Processing Customer Acceptance

Note that only an Active Contract can be billed, &amp; a Contract Status of Cancelled cannot be used on a SO.</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Processing Internal Approval</fullName>
                </value>
                <value>
                    <fullName>Internally Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Processing Customer Acceptance</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_contractid__c</fullName>
        <inlineHelpText>When checked , the Contract will be automatically assigned upon Save.  When unchecked, can be a user-defined  alpha-numeric unique identifier up to 30 characters in length.</inlineHelpText>
        <label>Contract ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_ctrev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This field is incremented automatically when Contract Terms are added or changed.  Initially the Revision is set to 1 and incremented from there.</inlineHelpText>
        <label>Contract Terms Rev</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_cttrev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This field is automatically set to the Revision of the Terms Template used on this Contract, as it was at the time that the Terms Template was set on the Contract.</inlineHelpText>
        <label>Terms Template Rev</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_custacceptsts__c</fullName>
        <inlineHelpText>Valid values are

Note Submitted
Submitted
Accepted
Rejected
Revision Requested

Note:  There is no validation between &apos;Contract Approval Status&apos;, &apos;Customer Acceptance Status&apos; &amp; &apos;Contract Status&apos; - it is up to users to manage this.</inlineHelpText>
        <label>Customer Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revision Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_datecompleted__c</fullName>
        <inlineHelpText>This field records the date that the contract was moved to Completed status.</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_dealvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deal Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_delprice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivery Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount Customer has deposited against this contract.  User-maintained.</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_desc__c</fullName>
        <inlineHelpText>Optional user-defined description up to 50 characters in length.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sales Division associated with the Contract.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_eststartdate__c</fullName>
        <inlineHelpText>The approximate start date as estimated when Contract was created.</inlineHelpText>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_excessbw__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess Image Charge - Mono</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_excesscol__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess Image Charge - Color</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_excessscan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Excess Image Charge - Scan</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_finalsalesgp__c</fullName>
        <formula>rstk__socontract_netrevenue__c - rstk__socontract_netxferprice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Sales GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_financecompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Company</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters (Finance Company)</relationshipLabel>
        <relationshipName>socontractsocust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_firstinstallment__c</fullName>
        <inlineHelpText>The date that the first payment installment will be billed to customer.</inlineHelpText>
        <label>First Installment Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_fmoverpaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FM Overs Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_icustinstaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The specific address record for the Installation Customer where the &quot;device&quot; is installed.</inlineHelpText>
        <label>Installation Customer Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Masters (Installation Customer Address)</relationshipLabel>
        <relationshipName>socontracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_installcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Installation Customer for this Sales Contract, which is the Customer where the &quot;device&quot; is installed.</inlineHelpText>
        <label>Hardware Installation Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters (Hardware Installation Customer)</relationshipLabel>
        <relationshipName>socontracts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_mincomvol__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Model Service Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_monmincopybw__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Monthly - Mono</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_monmincopycol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Monthly - Color</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_monmincopyscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Monthly - Scan</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_netrevenue__c</fullName>
        <formula>rstk__socontract_dealvalue__c - (rstk__socontract_totcheqback__c + rstk__socontract_totprodgives__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_netxferprice__c</fullName>
        <formula>rstk__socontract_totalcogs__c + rstk__socontract_adminfee__c + rstk__socontract_delprice__c + rstk__socontract_otherchgs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_nocust__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this contract is not customer specific.  No customer is specified, and the Contract can be referenced on the Sales Order of any customer.</inlineHelpText>
        <label>Non-Customer Specific Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_otherchgs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Other Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_pbillinprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Generated Recurring Billing job is running for the Contract. It is automatically set and cleared. Only one &quot;session&quot; can be run at a time for a given Sales Contract.</inlineHelpText>
        <label>Periodic Billing Process Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_ppproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A specific Project can be identified for which SO Lines will be placed. When set, all SO activity against this SO Line will be pegged to this Project.</inlineHelpText>
        <label>Project for Product Purchases</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Contract Masters (Project for Product Purchases)</relationshipLabel>
        <relationshipName>socontracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_pricecust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Pricing Customer for this Sales Contract, which is the Customer that is used to look up customer-specific pricing and discounts when deriving product prices.</inlineHelpText>
        <label>Pricing Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters (Pricing Customer)</relationshipLabel>
        <relationshipName>socontracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_purchaseorder__c</fullName>
        <inlineHelpText>Purchase Order associated with this Contract.</inlineHelpText>
        <label>Purchase Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rateper1000__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>User-defined rate.  Value should be entered as a percentage.  For example, 5% should be entered as 5, not .05.</inlineHelpText>
        <label>Rate per $1000</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbadvance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the billing is done in advance, billing the immediate next “period” as defined on the Contract.</inlineHelpText>
        <label>Recurring Billings in Advance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbfirstfull__c</fullName>
        <inlineHelpText>The Start Date of the first &quot;full period&quot; billed.  For example, a Recurring Billing may be monthly, yet the first Billing was for a partial month.  This reflects the first full-month Billing.</inlineHelpText>
        <label>First Full RB Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbfreq__c</fullName>
        <inlineHelpText>This defines the frequency for which billing activity will occur.  Valid values are 

Monthly
Quarterly
Semi-Annual
Annual

The default is &apos;Monthly&apos;</inlineHelpText>
        <label>Contract Term UOM / Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcblastthru__c</fullName>
        <inlineHelpText>The date that the last billing run billed through.</inlineHelpText>
        <label>Last Recurring Bill Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A specific active Project can be identified against which all billing charges will be made.  When set, all charges will be pegged against this Project.</inlineHelpText>
        <label>Project for Recurring Billing Invoices</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbstart__c</fullName>
        <inlineHelpText>The date on which billing commences.</inlineHelpText>
        <label>Recurring Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rcbtaxbillto__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the Bill-To Address Postal Code is used in tax calculations. Only applies (and is displayed) when Avalara Tax is active for the Division.</inlineHelpText>
        <label>Use Bill-To Address for Taxation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rentamount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>User-defined rent amount.</inlineHelpText>
        <label>Rent Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rentcpcbw__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental CPC - Mono</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rentcpccol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rental CPC - Color</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rentcpcscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rental CPC - Scan</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_residualval__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Residual Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_rev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This field is incremented automatically when Contract &quot;details&quot; are added or changed, such as Products for Purchase, Recurring Charges or Misc Charges.</inlineHelpText>
        <label>Contract Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_scustbtaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Must be a valid Bill-To Address for the &apos;Customer for Recurring Billings&apos;.</inlineHelpText>
        <label>Service Customer Bill-To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Masters (Service Customer Bill-To Address)</relationshipLabel>
        <relationshipName>socontracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that Service Items will be included in Contract.</inlineHelpText>
        <label>Include Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_servicecust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Customer to be billed for Recurring Charges, and must be a &apos;Related Customer&apos; of the Contract Customer.  Note that it is this Customer that is used to drive address choices for &apos;Service Customer Bill-To Address&apos;.</inlineHelpText>
        <label>Customer for Recurring Billings</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters (Customer for Recurring Billings)</relationshipLabel>
        <relationshipName>socontracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_showmsconinv__c</fullName>
        <label>Show Model Service Cost on Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_showtcconinv__c</fullName>
        <label>Show Total Copy Charge on Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_soctt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Contract Terms are to be associated with a given Contract, set to an active Contract Terms Template from dropdown. When a Contract Terms Template is selected, Contract Term Clauses are added to the Contract from Contract Terms Template selected.</inlineHelpText>
        <label>Contract Terms Template</label>
        <referenceTo>rstk__soctt__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_socust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Customer for which this Contract applies.  Must be a valid active Rootstock Customer.</inlineHelpText>
        <label>Contract Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_socustmsa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Contract is to be tied to a Master Services Agreement, select any applicable Customer MSA for the Contract Customer from dropdown.</inlineHelpText>
        <label>Master Services Agreement</label>
        <referenceTo>rstk__socustmsa__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_sohdrcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Customer for which Sales will be made to when using this Contract, and must be a &apos;Related Customer&apos; of the Contract Customer.</inlineHelpText>
        <label>Sales Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Masters (Sales Customer)</relationshipLabel>
        <relationshipName>socontracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_sosla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Service Level Agreement Process associated with this contract.  Field is optional.</inlineHelpText>
        <label>SLA Process</label>
        <referenceTo>rstk__sosla__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_srvcostbw__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Cost - Mono</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_srvcostcol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Cost - Color</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_srvcostscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Cost - Scan</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_staddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Ship-To Address (defined on the Customer Master &gt; Customer Addresses) for the Sales Customer, which is the Customer on the Sales Order Header.</inlineHelpText>
        <label>Sales Customer Ship-To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Masters (Sales Customer Ship-To Address)</relationshipLabel>
        <relationshipName>socontracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_status__c</fullName>
        <inlineHelpText>The current status of the Contract.</inlineHelpText>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-none-</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_taxloc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Tax Location associated with the Ship-To Customer Address.</inlineHelpText>
        <label>Recurring Billing Tax Location</label>
        <referenceTo>rstk__sotax__c</referenceTo>
        <relationshipLabel>Contract Masters</relationshipLabel>
        <relationshipName>socontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_term__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of &quot;periods&quot; in months that this Contract is in force. The default is 0, but this field must be set to a value &gt; 0 in order to save the record.</inlineHelpText>
        <label>Contract Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>